# async_demo

./: Cargo.toml  busy.rs  combo.rs  factorial.rs  first.rs  foo.rs  foobar.rs  io_uring.rs  job.rs  join.rs  main.rs  mio.rs  no_pin.rs  poll.rs  rayon.rs  rayon_1k.rs  rayon_20k.rs  readme.md  recursion.rs  regular.rs  select.rs  serial.rs  sleep_broken.rs  sleep_busy.rs  sleep_forever.rs  sleep_loop.rs  sleep_many_threads.rs  sleep_one_thread.rs  sleep_thread.rs  sleep_time.rs  sleep_time_tls.rs  sleep_tls.rs  sleep_wakers.rs  sleep_wakers_tls.rs  sleepy.rs  tasks_loop.rs  threads.rs  threads_100.rs  threads_1k.rs  threads_20k.rs  (+13 more)
src/: main.rs
