[package]
name = "async_demo"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "serial"
path = "serial.rs"

[[bin]]
name = "threads"
path = "threads.rs"

[[bin]]
name = "threads_100"
path = "threads_100.rs"

[[bin]]
name = "threads_20k"
path = "threads_20k.rs"

[[bin]]
name = "rayon_20k"
path = "rayon_20k.rs"

[[bin]]
name = "tokio_serial"
path = "tokio_serial.rs"

[[bin]]
name = "tokio_20k"
path = "tokio_20k.rs"

[[bin]]
name = "tokio_1m"
path = "tokio_1m.rs"

[[bin]]
name = "tokio_blocking"
path = "tokio_blocking.rs"

[[bin]]
name = "job"
path = "job.rs"

[[bin]]
name = "join"
path = "join.rs"

[[bin]]
name = "sleep_forever"
path = "sleep_forever.rs"

[[bin]]
name = "sleep_busy"
path = "sleep_busy.rs"

[[bin]]
name = "sleep_loop"
path = "sleep_loop.rs"

[[bin]]
name = "sleep_tls"
path = "sleep_tls.rs"

[[bin]]
name = "sleep_wakers"
path = "sleep_wakers.rs"

[[bin]]
name = "timeout"
path = "timeout.rs"

[[bin]]
name = "tokio_tasks"
path = "tokio_tasks.rs"

[[bin]]
name = "tokio_tasks_blocking"
path = "tokio_tasks_blocking.rs"

[[bin]]
name = "recursion"
path = "recursion.rs"

[[bin]]
name = "factorial"
path = "factorial.rs"

[dependencies]
futures = "0.3.30"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
