[package]
name = "async_demo"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "serial"
path = "serial.rs"

[[bin]]
name = "threads"
path = "threads.rs"

[[bin]]
name = "threads_100"
path = "threads_100.rs"

[[bin]]
name = "threads_1k"
path = "threads_1k.rs"

[[bin]]
name = "rayon_1k"
path = "rayon_1k.rs"

[[bin]]
name = "tokio_serial"
path = "tokio_serial.rs"

[[bin]]
name = "tokio_1k"
path = "tokio_1k.rs"

[[bin]]
name = "tokio_1m"
path = "tokio_1m.rs"

[[bin]]
name = "tokio_blocking"
path = "tokio_blocking.rs"

[[bin]]
name = "job"
path = "job.rs"

[[bin]]
name = "join"
path = "join.rs"

[[bin]]
name = "sleep_forever"
path = "sleep_forever.rs"

[[bin]]
name = "sleep_busy"
path = "sleep_busy.rs"

[[bin]]
name = "sleep_many_threads"
path = "sleep_many_threads.rs"

[[bin]]
name = "sleep_one_thread"
path = "sleep_one_thread.rs"

[[bin]]
name = "sleep_loop"
path = "sleep_loop.rs"

[[bin]]
name = "sleep_time"
path = "sleep_time.rs"

[[bin]]
name = "sleep_time_tls"
path = "sleep_time_tls.rs"

[[bin]]
name = "sleep_wakers"
path = "sleep_wakers.rs"

[[bin]]
name = "sleep_wakers_tls"
path = "sleep_wakers_tls.rs"

[[bin]]
name = "timeout"
path = "timeout.rs"

[[bin]]
name = "tokio_tasks"
path = "tokio_tasks.rs"

[[bin]]
name = "tokio_tasks_blocking"
path = "tokio_tasks_blocking.rs"

[[bin]]
name = "recursion"
path = "recursion.rs"

[[bin]]
name = "factorial"
path = "factorial.rs"

[[bin]]
name = "tasks_loop"
path = "tasks_loop.rs"

[dependencies]
crossbeam-channel = "0.5.13"
futures = "0.3.30"
rand = "0.8.5"
rayon = "1.10.0"
tokio = { version = "1.39.2", features = ["full"] }
